tests/error/misc_errors/undefined_var.err
Error: Variable not defined (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     return x
  |            ^ `x` is not defined

Guppy compilation failed due to 1 previous error
